refactor/check_output25.txt
cargo :     Checking citybound_native v0.10.0 (C:\Users\Fa\Desktop\IAF\citybound\refactor)
En línea: 1 Carácter: 58
+ ... ers\Fa\Desktop\IAF\citybound\refactor; cargo check --lib 2>&1 | Out-F ...
+                                            ~~~~~~~~~~~~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (    Checking ci...bound\refactor):String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
error: `self` parameter is only allowed in associated functions
   --> src\ecs.rs:127:18
    |
127 |     pub fn clear(&mut self) {
    |                  ^^^^^^^^^ not semantically valid as function parameter
    |
    = note: associated functions are those in `impl` or `trait` definitions

error: `self` parameter is only allowed in associated functions
   --> src\ecs.rs:135:19
    |
135 |     pub fn insert(&mut self, x: f32, y: f32, entity_bits: u64) {
    |                   ^^^^^^^^^ not semantically valid as function parameter
    |
    = note: associated functions are those in `impl` or `trait` definitions

error: `self` parameter is only allowed in associated functions
   --> src\ecs.rs:140:20
    |
140 |     pub fn rebuild(&mut self, world: &hecs::World) {
    |                    ^^^^^^^^^ not semantically valid as function parameter
    |
    = note: associated functions are those in `impl` or `trait` definitions

error: `self` parameter is only allowed in associated functions
   --> src\ecs.rs:150:23
    |
150 |     pub fn query_near(&self, x: f32, y: f32, radius: f32) -> SpatialQueryIter<'_> {
    |                       ^^^^^ not semantically valid as function parameter
    |
    = note: associated functions are those in `impl` or `trait` definitions

error[E0308]: mismatched types
   --> src\ecs.rs:119:38
    |
119 |     fn cell_index(x: f32, y: f32) -> (usize, usize) {
    |        ----------                    ^^^^^^^^^^^^^^ expected `(usize, usize)`, found `()`
    |        |
    |        implicitly returns `()` as its body has no tail or `return` expression
    |
    = note:  expected tuple `(usize, usize)`
            found unit type `()`

error[E0433]: cannot find `Self` in this scope
   --> src\ecs.rs:136:24
    |
136 |         let (cx, cy) = Self::cell_index(x, y);
    |                        ^^^^ `Self` is only available in impls, traits, and type definitions

error[E0433]: cannot find `Self` in this scope
   --> src\ecs.rs:152:24
    |
152 |         let (cx, cy) = Self::cell_index(x, y);
    |                        ^^^^ `Self` is only available in impls, traits, and type definitions

error[E0599]: no method named `rebuild` found for struct `SpatialGrid` in the current scope
   --> src\ecs.rs:343:18
    |
105 | pub struct SpatialGrid {
    | ---------------------- method `rebuild` not found for this struct
...
343 |     spatial_grid.rebuild(&world);
    |                  ^^^^^^^ method not found in `SpatialGrid`

error[E0599]: no method named `rebuild` found for struct `SpatialGrid` in the current scope
   --> src\ecs.rs:367:29
    |
105 | pub struct SpatialGrid {
    | ---------------------- method `rebuild` not found for this struct
...
367 |     game_world.spatial_grid.rebuild(&game_world.world);
    |                             ^^^^^^^ method not found in `SpatialGrid`

Some errors have detailed explanations: E0308, E0433, E0599.
For more information about an error, try `rustc --explain E0308`.
error: could not compile `citybound_native` (lib) due to 9 previous errors
